--- a/index.html
+++ b/index.html
@@ -216,10 +216,13 @@
                           </td>
                           <td class="agenda-events">
                             <div class="agenda-event">
-                              TBA
+                              Jesse Sigal (University of Edinburgh)
+                                <br/> Title: Algebraic effects with parameters and their handlers (<a href="abstracts.html#sigal">abstract</a>)
                             <br />
                             <br />
-                            TBA
+                              Zhixuan Yang (Imperial College London)
+                                <br/>
+                                Title:  A Logical Framework for Locally Cartesian Closed Categories (<a href="abstracts.html#yang">abstract</a>)
                       </div>
                     </td>
                   </tr>
@@ -239,13 +242,20 @@
                     </td>
                     <td class="agenda-events">
                       <div class="agenda-event">
-TBA
+                          Michael Arntzenius (RelationalAI)
+                                <br/>
+                                Title: Semantics for Nondeterministic Logic Programming via Mutually
+Exclusive Choice (<a href="abstracts.html#arntzenius">abstract</a>)
                     <br />
                     <br />
-   TBA
+                          Jack Liell-Cock (University of Oxford)
+                                <br/>
+                                Title: Compositional imprecise probability (<a href="abstracts.html#cock">abstract</a>)
                 <br />
                 <br />
-TBA
+                          Ben Simmer (University of Cambridge)
+                                <br/>
+                                Title: Abstract hardware catches concrete bugs (<a href="abstracts.html#simmer">abstract</a>)
             </div>
           </td>
         </tr>
@@ -347,10 +357,14 @@ TBA
       </td>
       <td class="agenda-events">
         <div class="agenda-event">
-TBA
+                          Conrad Watt (University of Cambridge)
+                                <br/>
+                                Title: Limitations of Concurrency on the Web (<a href="abstracts.html#watt">abstract</a>)
       <br/>
       <br/>
-TBA
+                          Luke Gaeson (University of Cambridge)
+                                <br/>
+                                Title:  Mix Testing: Specifying and Testing ABI Compatibility Of C/C++ Atomics Implementations (<a href="abstracts.html#gaeson">abstract</a>)
   </div>
 </td>
 </tr>
@@ -369,13 +383,20 @@ TBA
     14:00 - 15:30
   </td>
   <td class="agenda-events">
-TBA
+                Cliff Jones (Newcastle University)
+        <br/>
+        Title: Invariants || concurrency (<a href="abstracts.html#jones">abstract</a>)
 <br/>
 <br/>
-TBA
+                              Vitaly Aksenov (University of London)
+                                <br/>
+                                Title: Fearless Asynchronous Communications with Timed Multiparty Session Protocols (<a href="abstracts.html#hou">abstract</a>)
 <br/>
 <br/>
-TBA
+Burak Ekici (University of London)
+<br/>
+Title:Completeness of Asynchronous Session Tree Subtyping in Coq
+(<a href="abstracts.html#ekici">abstract</a>)
 </td>
 </tr>
 <tr>
@@ -395,10 +416,18 @@ TBA
     <td class="agenda-events">
       <div class="agenda-event">
       <p>
-        TBA
+        Danielle Marshall (University of Glasgow)
+        <br/>
+        Title: Non-Linear Communication via Graded Modal Session Types (<a href="abstracts.html#marshall">abstract</a>)
       </p>
       <p>
-        TBA
+      </p>
+                              Ping Hou (University of Oxford)
+                                <br/>
+                                Title: Fearless Asynchronous Communications with Timed Multiparty Session Protocols (<a href="abstracts.html#hou">abstract</a>)
+
+
+      </p>
       </div>
 </td>
 </tr>
