Pubs and Restaurants

--- a/index.html
+++ b/index.html
@@ -645,43 +645,63 @@ Subscribe or Unsubscribe
           Pubs and Restaurants
         </h4>
         <p>
-          TBA
-          <!--
-          For those who are planning to stay over, hang out after the workshop or visit Canterbury during the rest of the weekend, the (south european) organisers have crafted a list of recommended pubs and restaurants:
-        <ul>
+          There will be breakfast, lunch and coffee breaks provided. Moreover, the campus offers a number of options for lunch: Cafe Nero, Co-Op and La Dolc(h)e Vita.<br>
+
+          <br>
+          For dinner there is a variety of options in town, in particular in the high street.
+          <br>Here's a non-comprehensive list of places we would like to recommend.<br>
+          <br>
+          <br>
+            Restaurants:
+          <br>
+          <ul>
           <li>
-            <a href="">
-              Unicorn
-            </a>
-          </li>
-          <li>
-            <a href="Posillipo">
+            <a href="https://www.posillipo.co.uk/canterbury">
               Posillipo (Italian)
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://cafedez.com">
               Cafe Des Amis (Mexican)
             </a>
           </li>
-          <li>
-            <a href="">
-              Thomas Tallis
+          </ul>
+            Dining Pubs:
+            <br>
+
+                        <ul>
+            <li>
+            <a href="https://www.unicorninn.com">
+              Unicorn
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://www.parrotcanterbury.co.uk">
               The Parrot
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="http://www.thedolphin-canterbury.foodndrink.uk">
               The Dolphin
             </a>
           </li>
-        </ul> --
-            -->
-        </p>
+        </ul>
+
+            Ale Houses:
+            <ul>
+              <li>
+                <a href="https://thethomastallisalehouse.co.uk">
+                  Thomas Tallis
+                </a>
+              </li>
+              <li>
+                <a href="https://www.pegasustaproom.com">
+                  Pegasus
+                </a>
+              </li>
+
+            </ul>
+          </p>
       </div>
 
       <div class="container-fluid pt-4">
