--- a/index.html
+++ b/index.html
@@ -250,12 +250,13 @@ Exclusive Choice (<a href="abstracts.html#arntzenius">abstract</a>)
                     <br />
                           Jack Liell-Cock (University of Oxford)
                                 <br/>
-                                Title: Compositional imprecise probability (<a href="abstracts.html#cock">abstract</a>)
+                                Title: Compositional imprecise probability (<a href="abstracts.html#vollmer">abstract</a>)
                 <br />
                 <br />
-                          Ben Simmer (University of Cambridge)
+                          Tori Vollmer (University of Kent)
                                 <br/>
-                                Title: Abstract hardware catches concrete bugs (<a href="abstracts.html#simmer">abstract</a>)
+                                Title: A Mixed Linear and Graded Logic: Proofs, Terms, and Models (<a href="abstracts.html#vollmer">abstract</a>)
+                <br />
             </div>
           </td>
         </tr>
@@ -275,7 +276,10 @@ Exclusive Choice (<a href="abstracts.html#arntzenius">abstract</a>)
             </td>
             <td class="agenda-events">
               <div class="agenda-event">
-TBA
+                <br />
+                Ben Simmer (University of Cambridge)
+                <br/>
+                Title: Abstract hardware catches concrete bugs (<a href="abstracts.html#simmer">abstract</a>)
             <br />
             <br />
 TBA
@@ -645,7 +649,7 @@ Subscribe or Unsubscribe
           Pubs and Restaurants
         </h4>
         <p>
-          There will be breakfast, lunch and coffee breaks provided. Moreover, the campus offers a number of options for lunch: Cafe Nero, Co-Op and La Dolc(h)e Vita.<br>
+          We would like to remind you that breakfast, lunch and coffee breaks are provided at the workshop. Moreover, the campus offers a number of options for lunch: Cafe Nero, Co-Op and La Dolc(h)e Vita.<br>
 
           <br>
           For dinner there is a variety of options in town, in particular in the high street.
