--- a/abstracts.html
+++ b/abstracts.html
@@ -95,6 +95,14 @@ We build a version compiled into pKVM which can run online during Android testin
 We formalise the abstraction as an executable transition system in Rocq, which can be extracted to run offline from logs obtained from a lightweight instrumentation of pKVM, and give a pen-and-paper proof of its soundness with respect to an underlying Arm-A virtual-memory model.
 </p>
 <br>
+<h5 id="vollmer">Tori Vollmer: A Mixed Linear and Graded Logic: Proofs, Terms, and Models</h5>
+<p>
+Graded modal logics generalise standard modal logics via families of modalities indexed by an algebraic structure whose operations mediate between the different modalities. The graded "of-course" modality ! (bang) captures how many times a proposition is used and has an analogous interpretation to the of-course modality from linear logic; the of-course modality from linear logic can be modelled by a linear exponential comonad and graded of-course can be modelled by a graded linear exponential comonad. Benton showed in his seminal paper on Linear/Non-Linear logic that the of-course modality can be split into two modalities connecting intuitionistic logic with linear logic, forming a symmetric monoidal adjunction. Later, Fujii et al. demonstrated that every graded comonad can be decomposed into an adjunction and a 'strict action'. We give a similar result to Benton, leveraging Fujii et al.'s decomposition, showing that graded modalities can be split into two modalities connecting a graded logic with a graded linear logic. We propose a sequent calculus, its proof theory and categorical model, and a natural deduction system which we show is isomorphic to the sequent calculus. Interestingly, our system can also be understood as Linear/Non-Linear logic composed with an action that adds the grading, further illuminating the shared principles between linear logic and a class of graded modal logics.
+<br><br>
+    Joint work with Danielle Marshall, Harley Eades III, and Dominic Orchard.
+</p>
+<br>
+
 
 
 <h5 id="ohearn">Peter O'Hearn: Program Analysis for the People</h5>
