--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ Title:Completeness of Asynchronous Session Tree Subtyping in Coq
 <br><br>
     Please send title and abstract by the end of
 <br><br>
-    <strong>Tue, 18th June 2024</strong>
+    <strong>Tue, 1st July 2024</strong>
 <br><br>
     Complete the registration form by
 <br><br>
