Vitaly Title fixed

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ TBA
 <br/>
                               Vitaly Aksenov (University of London)
                                 <br/>
-                                Title: Fearless Asynchronous Communications with Timed Multiparty Session Protocols (<a href="abstracts.html#hou">abstract</a>)
+                                Title: Semi-automatic efficient granularity control (<a href="abstracts.html#hou">abstract</a>)
 <br/>
 <br/>
 Burak Ekici (University of London)
