--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@ TBA
                                 Title: Limitations of Concurrency on the Web (<a href="abstracts.html#watt">abstract</a>)
       <br/>
       <br/>
-                          Luke Gaeson (University of Cambridge)
+                          Luke Geeson (University of Cambridge)
                                 <br/>
-                                Title:  Mix Testing: Specifying and Testing ABI Compatibility Of C/C++ Atomics Implementations (<a href="abstracts.html#gaeson">abstract</a>)
+                                Title:  Mix Testing: Specifying and Testing ABI Compatibility Of C/C++ Atomics Implementations (<a href="abstracts.html#geeson">abstract</a>)
   </div>
 </td>
 </tr>
