--- a/index.html
+++ b/index.html
@@ -637,6 +637,11 @@
                   The Sun Hotel
                 </a>
               </li>
+              <li>
+                <a href="https://yorkelodge.com/">
+                  Yorke Lodge Bed and Breakfast
+                </a>
+              </li>
             </ul>
             Alternatively we have a high number of reserved rooms in Keynes
             college within the university's
