--- a/index.html
+++ b/index.html
@@ -633,6 +633,11 @@
                 </a>
               </li>
               <li>
+                <a href="https://www.hilton.com/en/hotels/rcshxhx-hampton-canterbury/?SEO_id=GMB-EMEA-HX-RCSHXHX/">
+                  Hampton by Hilton
+                </a>
+              </li>
+              <li>
                 <a href="https://www.thesunhotelcanterbury.co.uk/">
                   The Sun Hotel
                 </a>
@@ -642,6 +647,12 @@
                   Yorke Lodge Bed and Breakfast
                 </a>
               </li>
+              <li>
+                <a href="http://www.acacialodge.co.uk">
+                  Acacia Lodge
+                </a>
+              </li>
+
             </ul>
             Alternatively we have a high number of reserved rooms in Keynes
             college within the university's
