--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
             <ul>
               <li>
                 <a href="https://www.thefalstaffincanterbury.com/">
-                  Falstaff
+                  Falstaff (near Canterbury West station and the bus stop)
                 </a>
               </li>
               <li>
@@ -672,12 +672,9 @@
               Pubs and Restaurants
             </h4>
             <p>
-              We would like to remind you that breakfast, lunch and coffee
-              breaks are provided at the workshop. Moreover, the campus offers a
-              number of options for lunch: Cafe Nero, Co-Op and La Dolc(h)e
-              Vita.<br />
-
-              <br />
+              Breakfast, lunch and coffee breaks will be provided.
+              If you are looking for places to eat on campus click
+              <a href="https://www.kent.ac.uk/locations/canterbury/campus-life/eat-drink-and-shop">here</a><br />
               For dinner there is a variety of options in town, in particular in
               the high street.
               <br />Here's a non-comprehensive list of places we would like to
