--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@
                       <td class="agenda-time">11:30 - 13:00</td>
                       <td class="agenda-events">
                         <div class="agenda-event">
-                                                    Ben Simmer (University of Cambridge)
+                                                    Ben Simner (University of Cambridge)
                           <br />
                           Title: Abstract hardware catches concrete bugs (<a
-                            href="abstracts.html#simmer"
+                            href="abstracts.html#simner"
                             >abstract</a
                           >)
                           <br />
