--- a/index.html
+++ b/index.html
@@ -674,8 +674,10 @@
             </h4>
             <p>
               Breakfast, lunch and coffee breaks will be provided.
-              If you are looking for places to eat on campus click
-              <a href="https://www.kent.ac.uk/locations/canterbury/campus-life/eat-drink-and-shop">here</a><br />
+              <br>
+                If you are looking for places to eat on campus click on the link below:
+              <a href="https://www.kent.ac.uk/locations/canterbury/campus-life/eat-drink-and-shop">Eat on Campus</a><br />
+              <br><br>
               For dinner there is a variety of options in town, in particular in
               the high street.
               <br />Here's a non-comprehensive list of places we would like to
