--- a/index.html
+++ b/index.html
@@ -675,8 +675,8 @@
             <p>
               Breakfast, lunch and coffee breaks will be provided.
               <br>
-                If you are looking for places to eat on campus click on the link below:
-              <a href="https://www.kent.ac.uk/locations/canterbury/campus-life/eat-drink-and-shop">Eat on Campus</a><br />
+                There is a wide variety of restaurants and pubs in the university should you need to
+              <a href="https://www.kent.ac.uk/locations/canterbury/campus-life/eat-drink-and-shop">eat and drink on campus</a><br />
               <br><br>
               For dinner there is a variety of options in town, in particular in
               the high street.
