--- a/index.html
+++ b/index.html
@@ -674,9 +674,9 @@
             </h4>
             <p>
               Breakfast, lunch and coffee breaks will be provided.
-              <br>
-                There is a wide variety of restaurants and pubs in the university should you need to
-              <a href="https://www.kent.ac.uk/locations/canterbury/campus-life/eat-drink-and-shop">eat and drink on campus</a><br />
+              <br><br>
+                There is also a wide variety of restaurants, supermarkets and pubs on campus. Here's the link for a comprehensive list:
+              <a href="https://www.kent.ac.uk/locations/canterbury/campus-life/eat-drink-and-shop">eat and drink on campus.</a><br />
               <br><br>
               For dinner there is a variety of options in town, in particular in
               the high street.
