--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                           >)
                           <br />
                           <br />
-                          Luke Geeson (University of Cambridge)
+                          Luke Geeson (University College London)
                           <br />
                           Title: Mix Testing: Specifying and Testing ABI
                           Compatibility Of C/C++ Atomics Implementations (<a
