--- a/index.html
+++ b/index.html
@@ -263,6 +263,16 @@
                       <td class="agenda-events">
                         <div class="agenda-event">
                           <br />
+                          Simon Thompson (University of Kent )
+                          <br />
+                          Title: A Tribute to David Turner (<a
+                            href="abstracts.html#thompson"
+                            >abstract</a
+                          >)
+                          <br />
+                          <br />
+
+                          <br />
                           Guillaume Ambal (Imperial College London)
                           <br />
                           Title: Semantics of Remote Direct Memory Access (<a
