--- a/abstracts.html
+++ b/abstracts.html
@@ -411,3 +411,12 @@
   can and should be made.
 </p>
 <br />
+
+
+
+<h5 id="thompson">David Turner, 1946–2023</h5>
+<p>
+
+  This will be a short appreciation of David’s work and legacy. Much of David's work was done at Kent, where he was the focus for Kent’s interests in programming languages and theoretical computer science from the early 1980s, an interest that survives in the PLAS group today.
+</p>
+<br />
