--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="agenda-time">16:00 - 17:00</td>
+                      <td class="agenda-time">16:00 - 17:30</td>
                       <td class="agenda-events">
                         <div class="agenda-event">
                           Simon Thompson (University of Kent )
                           <br />
-                          Title: A Tribute to David Turner (<a
+                          Title: A David Turner, 1946–2023 (<a
                             href="abstracts.html#thompson"
                             >abstract</a
                           >)
