--- a/abstracts.html
+++ b/abstracts.html
@@ -107,7 +107,7 @@
 </p>
 <br />
 
-<h5 id="simner">Ben Simner: Abstract hardware catches concrete bugs</h5>
+<h5 id="fourier">Thomas Fourier: Abstract hardware catches concrete bugs</h5>
 <p>
   We present a technique to find bugs from insufficient virtual-memory
   synchronisation, building a relaxed-memory checker that is based on a general
