--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         <div class="agenda-event">
                           Simon Thompson (University of Kent )
                           <br />
-                          Title: A David Turner, 1946–2023 (<a
+                          Title: David Turner, 1946–2023 (<a
                             href="abstracts.html#thompson"
                             >abstract</a
                           >)
@@ -349,10 +349,10 @@
                       <td class="agenda-time">11:30 - 13:00</td>
                       <td class="agenda-events">
                         <div class="agenda-event">
-                                                    Ben Simner (University of Cambridge)
+                                                    Thomas Fourier (University of Cambridge)
                           <br />
                           Title: Abstract hardware catches concrete bugs (<a
-                            href="abstracts.html#simner"
+                            href="abstracts.html#fourier"
                             >abstract</a
                           >)
                           <br />
