--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="agenda-time">11:30 - 13:00</td>
+                      <td class="agenda-time">11:30 - 13:00<br><br>Chair: Marco Paviotti</td>
                       <td class="agenda-events">
                         <div class="agenda-event">
                           Jesse Sigal (University of Edinburgh)
@@ -201,9 +201,7 @@
                           Zhixuan Yang (Imperial College London)
                           <br />
                           Title: A Logical Framework for Locally Cartesian
-                          Closed Categories (<a href="abstracts.html#yang"
-                            >abstract</a
-                          >)
+                          Closed Categories (<a href="abstracts.html#yang">abstract</a>)
                           <br />
                           <br />
                           Teodoro Freund (Huawei UK R&D)
@@ -222,7 +220,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="agenda-time">14:00 - 15:30</td>
+                      <td class="agenda-time">14:00 - 15:30<br><br>Chair: Dominic Orchard</td>
                       <td class="agenda-events">
                         <div class="agenda-event">
                           Michael Arntzenius (RelationalAI)
@@ -259,7 +257,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="agenda-time">16:00 - 17:30</td>
+                      <td class="agenda-time">16:00 - 17:30<br><br>Chair: Michael Vollmer</td>
                       <td class="agenda-events">
                         <div class="agenda-event">
                           Simon Thompson (University of Kent )
@@ -340,7 +338,7 @@
                     </tr>
 
                     <tr>
-                      <td class="agenda-time">11:00 - 11:30</td>
+                      <td class="agenda-time">11:00 - 11:30<br><br>Chair: Stefan Marr</td>
                       <td class="agenda-events">
                         <div class="agenda-event">Coffee Break</div>
                       </td>
@@ -376,7 +374,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="agenda-time">13:00 - 14:00</td>
+                      <td class="agenda-time">13:00 - 14:00<br><br>Chair: David Castro-Perez</td>
                       <td class="agenda-events">
                         <div class="agenda-event">Lunch</div>
                       </td>
@@ -409,7 +407,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="agenda-time">15:30 - 16:00</td>
+                      <td class="agenda-time">15:30 - 16:00<br><br>Chair: David Castro-Perez</td>
                       <td class="agenda-events">
                         <div class="agenda-event">Coffee Break</div>
                       </td>
