Ping Hou cancelled

--- a/index.html
+++ b/index.html
@@ -427,13 +427,13 @@
                           >)
                           <br />
                           <br />
-                          Ping Hou (University of Oxford)
+                          <s>Ping Hou (University of Oxford)
                           <br />
                           Title: Fearless Asynchronous Communications with Timed
                           Multiparty Session Protocols (<a
                             href="abstracts.html#hou"
                             >abstract</a
-                          >)
+                          >)</s>
                         </div>
                       </td>
                     </tr>
