--- a/abstracts.html
+++ b/abstracts.html
@@ -417,6 +417,30 @@
 <h5 id="thompson">Simon Thompson: David Turner, 1946–2023</h5>
 <p>
 
-  This will be a short appreciation of David’s work and legacy. Much of David's work was done at Kent, where he was the focus for Kent’s interests in programming languages and theoretical computer science from the early 1980s, an interest that survives in the PLAS group today.
+  This will be a short appreciation of David’s work and legacy. Much of David's
+  work was done at Kent, where he was the focus for Kent’s interests in
+  programming languages and theoretical computer science from the early 1980s,
+  an interest that survives in the PLAS group today.
+</p>
+<br />
+
+<h5 id="pears">
+  TOASTER - A Toolchain for Generating Erlang Stubs with Inline Runtime Monitors
+  from Timeout Asynchronous Session Types
+</h5>
+<p>
+  In this talk I will provide an overview of Timeout Asynchronous Session Types
+  (TOAST for short) and present a tool that was recently accepted at the Erlang
+  Workshop. Our tool automates the generation of correct-by-construction program
+  stubs with timeouts in Erlang from TOAST processes and provides an inline
+  monitoring framework integrated with Erlang supervisors. TOAST is the first
+  theory of asynchronous session types to feature timeouts in the timed setting
+  and do so by lifting a long-standing restriction on session types that is
+  mixed-choice. I will illustrate that TOAST timeouts are a special class of
+  real-time asynchronous mixed choices that, against the general case, are free
+  from deadlocks. I will briefly cover all aspects of their theory, from
+  well-formedness of types to the type-checking of processes and, towards the
+  end I hope to give a live demonstration of some of the tools for TOAST I have
+  been developing.
 </p>
 <br />
