--- a/index.html
+++ b/index.html
@@ -427,13 +427,10 @@
                           >)
                           <br />
                           <br />
-                          <s>Ping Hou (University of Oxford)
+                          Jonah Pears (University of Kent)
                           <br />
-                          Title: Fearless Asynchronous Communications with Timed
-                          Multiparty Session Protocols (<a
-                            href="abstracts.html#hou"
-                            >abstract</a
-                          >)</s>
+                          Title: TOASTER - A Toolchain for Generating Erlang Stubs with Inline Runtime Monitors from Timeout Asynchronous Session Types
+ (<a href="abstracts.html#pears" >abstract</a>)
                         </div>
                       </td>
                     </tr>
